--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "Pioneer"
+name = "Rift"
 version = "0.1.0"
-description = "Pioneer"
+description = "Beta_Version"
 readme = "README.md"
 requires-python = ">=3.9, <4.0"
 
