<env.prod> ignored or not test.

--- a/.env.prod
+++ b/.env.prod
@@ -157,15 +157,14 @@ memes_list_image_config='
 
 # steam_info
 STEAM_API_KEY=["9DE8B6C0639AFF378B8AA79B7AD36F82"]
-STEAM_REQUEST_INTERVAL=300
+STEAM_REQUEST_INTERVAL=60
 
 # Leetcode2
-LEETCODE_QQ_FRIENDS=[631294134, 2559815776, 2641283261]
-LEETCODE_QQ_GROUPS=[1042164649]
+LEETCODE_QQ_FRIENDS=[559815776]
+LEETCODE_QQ_GROUPS=[928654084]
 LEETCODE_INFORM_TIME='
 [
-    {"HOUR":8,"MINUTE":7},
-    {"HOUR":22,"MINUTE":7}
+    {"HOUR":8,"MINUTE":5}
 ]
 '
 
