--- a/.env.prod
+++ b/.env.prod
@@ -155,7 +155,7 @@ memes_list_image_config='
 }
 '
 
-# steam_info
+# steam_info //
 STEAM_API_KEY=["9DE8B6C0639AFF378B8AA79B7AD36F82"]
 STEAM_REQUEST_INTERVAL=60
 
